# libaur

./: .gitignore  .ycm_extra_conf.py  LICENSE  Makefile.am  README.md  configure.ac
src/: aur-internal.h  aur.c  aur.h  cow.c  macro.h  package.c  request.c
